--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <h1>Decor & <br> enjoy </h1>
         <img src="/images/logo.jpeg.png" alt=""><br>
-        <a href="login.html" class="btn">Get Started</a>
+        <a href="home.html" class="btn">Get Started</a>
         <p>Already have an account? <a href="login.html">sign in</a></p>
     </div>
 
